<resources>
    <string name="app_name">TextbookBuddies :)</string>
    <string name="title_activity_login">Textbook Buddies</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textbook_buddies">Textbook Buddies :)</string>
    <string name="logout">Logout</string>
    <string name="someone">Someone!</string>
    <string name="hello">Hello</string>
    <string name="username">Username:</string>

    <string name="value_any_classes">Any Subject</string>
    <string name="value_any_location">Anywhere</string>
    <string name="value_any_price">Any price</string>

    <string name="price_1">$0 - $20</string>
    <string name="price_2">$20 - $40</string>
    <string name="price_3">$40 - $60</string>
    <string name="price_4">$60+</string>

    <string name="label_classes">Classes</string>
    <string name="label_location">Location</string>
    <string name="label_price">Price</string>
    <string name="label_sort_by">Sort By</string>

    <string name="header_filters">Filter</string>
    <string name="search">Search</string>

    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_by_price">Sort by Price</string>

    <string name="sorted_by_title">sorted by title</string>
    <string name="sorted_by_price">sorted by price</string>

    <string name="delete_all">Delete All</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="submit">Submit</string>
    <string name="change_password"><u>Change password</u></string>
    <string name="change_profile_photo"><u>Change profile photo</u></string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="contact">contact</string>
    <string name="contact_">Contact:</string>
    <string name="class_">Class:</string>
    <string name="change_email"><u>Change email</u></string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_password_">Change Password</string>
    <string name="upload_change_profile_photo">Upload/Change Profile photo</string>

    <!-- Types of food I could think of in 5 minutes -->
    <string-array name="classes">
        <item>@string/value_any_classes</item>

        <item>AAEC</item>
        <item>ACIS</item>
        <item>AFST</item>
        <item>AHRM</item>
        <item>AINS</item>
        <item>ALCE</item>
        <item>ALS</item>
        <item>AOE</item>
        <item>APS</item>
        <item>APSC</item>
        <item>ARBC</item>
        <item>ARCH</item>
        <item>AS</item>
        <item>ASPT</item>
        <item>AT</item>
        <item>BC</item>
        <item>BCHM</item>
        <item>BDS</item>
        <item>BIOL</item>
        <item>BIT</item>
        <item>BMES</item>
        <item>BMSP</item>
        <item>BMVS</item>
        <item>BSE</item>
        <item>BTDM</item>
        <item>C21S</item>
        <item>CAUS</item>
        <item>CEE</item>
        <item>CEM</item>
        <item>CHE</item>
        <item>CHEM</item>
        <item>CHN</item>
        <item>CINE</item>
        <item>CLA</item>
        <item>CMDA</item>
        <item>CMST</item>
        <item>CNST</item>
        <item>COMM</item>
        <item>CONS</item>
        <item>COS</item>
        <item>CRIM</item>
        <item>CS</item>
        <item>CSES</item>
        <item>DANC</item>
        <item>DASC</item>
        <item>ECE</item>
        <item>ECON</item>
        <item>EDCI</item>
        <item>EDCO</item>
        <item>EDCT</item>
        <item>EDEL</item>
        <item>EDEP</item>
        <item>EDHE</item>
        <item>EDIT</item>
        <item>EDP</item>
        <item>EDRE</item>
        <item>ENGE</item>
        <item>ENGL</item>
        <item>ENSC</item>
        <item>ENT</item>
        <item>ESM</item>
        <item>FA</item>
        <item>FCS</item>
        <item>FIN</item>
        <item>FIW</item>
        <item>FL</item>
        <item>FMD</item>
        <item>FR</item>
        <item>FREC</item>
        <item>FST</item>
        <item>GBCB</item>
        <item>GEOG</item>
        <item>GEOS</item>
        <item>GER</item>
        <item>GIA</item>
        <item>GR</item>
        <item>GRAD</item>
        <item>HD</item>
        <item>HEB</item>
        <item>HIST</item>
        <item>HNFE</item>
        <item>HORT</item>
        <item>HTM</item>
        <item>HUM</item>
        <item>IDS</item>
        <item>IS</item>
        <item>ISC</item>
        <item>ISE</item>
        <item>ITAL</item>
        <item>ITDS</item>
        <item>JMC</item>
        <item>JPN</item>
        <item>JUD</item>
        <item>LAHS</item>
        <item>LAR</item>
        <item>LAT</item>
        <item>LDRS</item>
        <item>MACR</item>
        <item>MATH</item>
        <item>ME</item>
        <item>MGT</item>
        <item>MINE</item>
        <item>MKTG</item>
        <item>MN</item>
        <item>MS</item>
        <item>MSE</item>
        <item>MTRG</item>
        <item>MUS</item>
        <item>NANO</item>
        <item>NEUR</item>
        <item>NR</item>
        <item>NSEG</item>
        <item>PAPA</item>
        <item>PHIL</item>
        <item>PHS</item>
        <item>PHYS</item>
        <item>PM</item>
        <item>PORT</item>
        <item>PPWS</item>
        <item>PR</item>
        <item>PSCI</item>
        <item>PSVP</item>
        <item>PSYC</item>
        <item>REAL</item>
        <item>RED</item>
        <item>RLCL</item>
        <item>RTM</item>
        <item>RUS</item>
        <item>SBIO</item>
        <item>SOC</item>
        <item>SPAN</item>
        <item>SPES</item>
        <item>SPIA</item>
        <item>STAT</item>
        <item>STL</item>
        <item>STS</item>
        <item>SYSB</item>
        <item>TA</item>
        <item>TBMH</item>
        <item>UAP</item>
        <item>UH</item>
        <item>UNIV</item>
        <item>VM</item>
        <item>WATR</item>
        <item>WGS</item>

    </string-array>

    <string-array name="search_by">
        <item>title</item>
        <item>isbn</item>
        <item>class code eg. CS 3714</item>
    </string-array>

    <string-array name="sort_by">
        <item>title</item>
        <item>price</item>
    </string-array>

</resources>