<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/maroon">

            <ImageView
                android:id="@+id/iv_btn_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_btn_back_foreground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_username_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/someone"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="90dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            </TextView>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_profile_orange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="130dp"/>

            <TextView
                android:id="@+id/tv_username_mid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/someone"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_profile_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_profile_photo"
                android:textColor="@color/blueLink"
                android:textSize="20sp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="115dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_password_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/blueLink"
                android:textSize="20sp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="125dp"/>
        </LinearLayout>



    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView_Bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/maroon"
        android:visibility="visible"
        app:itemIconTint="?android:attr/colorActivatedHighlight"
        app:itemTextColor="?android:attr/colorActivatedHighlight"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>